<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GuestFormActivity"
    android:padding="16dp" >

    <TextView
        android:id="@+id/text_name"
        android:text="@string/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/text_present"
        android:text="@string/text_presenca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radio_confirmation"
        app:layout_constraintTop_toBottomOf="@+id/text_present"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_present"
            app:layout_constraintTop_toBottomOf="@id/text_present"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioButton
            android:id="@+id/radio_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_absent"
            app:layout_constraintTop_toBottomOf="@id/text_present"
            app:layout_constraintStart_toEndOf="@+id/radio_present"
            app:layout_constraintEnd_toEndOf="parent"/>

    </RadioGroup>
    
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/radio_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/button_save"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>